--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@
 # https://platform.openai.com/api-keys
 OPENAI_API_KEY=
 SERVER_URL=http://localhost:3000
+
+
+DATABASE_URL="sqlserver://192.168.2.217:1433;database=ControlLogin;user=sa;password=@password;trustServerCertificate=true"
