--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   "dependencies": {
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.3.0",    
+    "@nestjs/core": "^10.3.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.0",
+    "@prisma/client": "6.5.0",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.87.3",
+    "prisma": "6.5.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.1"
